--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Particles Background</title>
+    <title>RamDev</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -14,14 +14,20 @@
         <section class="screenInitial">
             <div class="titles">
                 <h1>Hola, <br>soy Eleazar Villalba</h1>
-                <h2>Desarrollo aplicaciones moviles!</h2>
+                <h2>Desarrollo aplicaciones móviles!</h2>
                 <div class="contacts">
-                    <img class="contactImg" src="images/x.png" />
-                    <img class="contactImg" src="images/instagram.png" />
-                    <img class="contactImg" src="images/gmail.png" />
+                    <a href="https://x.com/VillalbaEleazar" target="_blank">
+                        <img class="contactImg" src="images/x.png" alt="X" />
+                    </a>
+                    <a href="https://instagram.com/eleazarv7" target="_blank">
+                        <img class="contactImg" src="images/instagram.png" alt="Instagram" />
+                    </a>
+                    <a href="mailto:ramirodev7@gmail.com">
+                        <img class="contactImg" src="images/gmail.png" alt="Gmail" />
+                    </a>
                 </div>
             </div>
-            <img class="image" src="images/img.webp" />
+            <img class="image" src="images/img.webp" alt="Imagen" />
         </section>
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
