--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
                 <h1>Hola, <br>soy Eleazar Villalba</h1>
                 <h2>Desarrollo aplicaciones móviles!</h2>
                 <div class="contacts">
-                    <a class="contactImg" href="https://x.com/VillalbaEleazar" target="_blank">
-                        <img src="images/x.png" alt="X" />
+                    <a  class="contactImg" href="https://x.com/VillalbaEleazar" target="_blank">
+                        <img class="contactImg" src="images/x.png" alt="X" />
                     </a>
-                    <a class="contactImg" href="https://instagram.com/eleazarv7" target="_blank">
-                        <img src="images/instagram.png" alt="Instagram" />
+                    <a  class="contactImg" href="https://instagram.com/eleazarv7" target="_blank">
+                        <img class="contactImg" src="images/instagram.png" alt="Instagram" />
                     </a>
-                    <a class="contactImg" href="mailto:ramirodev7@gmail.com">
-                        <img src="images/gmail.png" alt="Gmail" />
+                    <a  class="contactImg" href="mailto:ramirodev7@gmail.com">
+                        <img class="contactImg" src="images/gmail.png" alt="Gmail" />
                     </a>
                 </div>
             </div>
