--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 <h2>Desarrollo aplicaciones móviles!</h2>
                 <div class="contacts">
                     <a  class="contactImg" href="https://x.com/VillalbaEleazar" target="_blank">
-                        <img class="contactImg" src="images/x.png" alt="X" />
+                        <img class="img" src="images/x.png" alt="X" />
                     </a>
                     <a  class="contactImg" href="https://instagram.com/eleazarv7" target="_blank">
-                        <img class="contactImg" src="images/instagram.png" alt="Instagram" />
+                        <img class="img" src="images/instagram.png" alt="Instagram" />
                     </a>
                     <a  class="contactImg" href="mailto:ramirodev7@gmail.com">
-                        <img class="contactImg" src="images/gmail.png" alt="Gmail" />
+                        <img class="img" src="images/gmail.png" alt="Gmail" />
                     </a>
                 </div>
             </div>
