--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
             <a
               href="https://play.google.com/store/apps/details?id=unir.boletas"
               class="store-button google-play"
+              target="_blank"
             >
               <img src="images/download_google_play.jpg" alt="Google Play" />
             </a>
-            <a href="" class="store-button app-store">
+            <a href="#" class="store-button app-store" target="_blank">
               <img src="images/download_app_store.jpg" alt="App Store" />
             </a>
           </div>
@@ -79,10 +80,11 @@
             <a
               href="https://play.google.com/store/apps/details?id=unir.boletas"
               class="store-button google-play disabled"
+              target="_blank"
             >
               <img src="images/download_google_play.jpg" alt="Google Play" />
             </a>
-            <a href="" class="store-button app-store">
+            <a href="" class="store-button app-store" target="_blank">
               <img src="images/download_app_store.jpg" alt="App Store" />
             </a>
           </div>
