--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RamDev</title>
+    <link rel="icon" href="images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -94,6 +95,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!-- <script src="cards.js"></script> -->
     <script src="script.js"></script>
     <script>
       function scrollToApps() {
